unpackaged/objects/Accobj4__c.object
<CustomObject>
    <description>gfdgfdg</description>
    <fields>
        <fullName>Field1__c</fullName>
        <description>fcfc</description>
        <label>Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <description>gffghf</description>
        <label>Field2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Phone</type>
    </fields>
    <label>Accobj4</label>
    <nameField>
        <label>Accobj4 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accobj4s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>